# markview

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Editor.tsx  FolderTree.tsx  GraphView.tsx  HelpModal.tsx  InlinePreview.tsx  MarkdownPreview.tsx  MarkdownToolbar.tsx  QuickSwitcher.tsx  SettingsModal.tsx  TabBar.tsx  VaultSearchModal.tsx
