[package]
name = "markview"
version = "2.0.0"
description = "Markview — Markdown Editor & Vault"
authors = ["kimmania"]
license = "MIT"
repository = "https://github.com/kimmania/markview"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
objc2-web-kit = "0.3.2"
objc2-foundation = "0.3.2"
block2 = "0.6.2"
objc2 = "0.6.4"
